Closed Bug 1418164 Opened 7 years ago Closed 7 years ago

###!!! ASSERTION: writer returned an error with non-zero writeCount

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: mrbkap, Assigned: mrbkap)

Details

Attachments

(1 file)

STR: 1. Start with --jsdebugger --wait-for-jsdebugger On startup, I get: [Parent 63564, Main Thread] ###!!! ASSERTION: writer returned an error with non-zero writeCount: '(NS_FAILED(rv) ? (*aWriteCount == 0) : true)', file /Users/mrbkap/work/main/mozilla/xpcom/io/nsInputStreamTee.cpp, line 206 This is because: (lldb) p tee->mWriter (nsWriteSegmentFun) $1 = 0x0000000101654590 (XUL`TestInputStream(nsIInputStream*, void*, char const*, unsigned int, unsigned int, unsigned int*) at nsStreamUtils.cpp:744) doesn't touch aWriteCount. That's easy enough to fix. I don't think this affects non-debug builds.
Comment on attachment 8929276 [details] Bug 1418164 - Don't leave uninitialized values lying around. https://reviewboard.mozilla.org/r/200580/#review205704
Attachment #8929276 - Flags: review?(nfroyd) → review+
Pushed by mrbkap@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b34457e29b87 Don't leave uninitialized values lying around. r=froydnj
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: