Bug 1418164 - Don't leave uninitialized values lying around. r=froydnj

The users of WriteSegmentFun and ReadSegmentFun read the final out parameter
whether or not the function returns an error. We should make sure to fill it
in with a sane value.

MozReview-Commit-ID: GWDS8gENUMB